agregue boton MOSTRAR CODIGO

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <title>PreEntre1-Casco</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+              <li><a href="./JS/main.js">MOSRTAR EL CODIGO</a></li>
+            </ul>
+          </nav>
+    </header>
     <h1>Pre-Entrega 1</h1>
     <h2>Comision - 53965</h2>
-    
-
-    <script src="JS/main.js"></script>
+    <script src="./JS/main.js"></script>
 </body>
 </html>
