--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <ul>
-              <li><a href="./JS/main.js">MOSRTAR EL CODIGO</a></li>
+              <li><a href="./JS/main.js">MOSTRAR EL CODIGO</a></li>
             </ul>
           </nav>
     </header>
